Updating api spec & making total price be calculated from deal_items
