# src/core/schema/create-deal-http-schema.ts
@@ -4,7 +4,6 @@ export const createDealHttpSchema = z.object({
   name: z.string(),
   currency: z.string().max(255),
   status: z.enum(['available', 'sold']),
-  total_price: z.number(),
   discount: z.object({
     type: z.enum(['percentage','flat']),
     amount: z.number()
