# src/core/schema/update-deal-http-schema.ts
@@ -4,5 +4,4 @@ export const updateDealHttpSchema = z.object({
   name: z.string().optional(),
   currency: z.string().max(255).optional(),
   status: z.enum(['available', 'sold']).optional(),
-  total_price: z.number().optional(),
 });
